--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/GlobalIndex/_GobalIndexWrapPartial.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/GlobalIndex/_GobalIndexWrapPartial.cshtml
@@ -3,7 +3,7 @@
 
 <tr>
     <td>
-        <a href="@Model.DetailLink" class="o-contentLink" target="_blank">@Model.IndexName</a>
+        <a href="@Model.DetailLink" class="o-contentLink" target="_blank">@Model.IndexNameHtmlString</a>
     </td>
     <td>
         @Model.MarketPriceText<br><span class="t-date">@Model.DataDate</span>
