--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
@@ -26,6 +26,7 @@
     var detailsUrl = FundRelatedSettingModel.GetFundDetailsUrl();
     var closeFiveYearsUrl = FundRelatedSettingModel.GetFundCloseFiveYearsUrl();
     var exposeUrl = FundRelatedSettingModel.GetFundExposeUrl();
+    string pageId = @Sitecore.Context.Item.ID.ToString();
 }
 
 <div class="l-mainstage">
@@ -67,7 +68,7 @@
                             <h2 class="c-pageHeader__subTitle">@BasicData.FundEnglishName</h2>
                         </div>
                         <div class="c-pageHeader__views">
-                            <div class="o-views o-views--bk">@BasicData.ViewCount</div>
+                            <div class="o-views o-views--bk" data-eh="visit-update,visit-exec" eh-visit-pageid="@pageId" eh-visit-qs="id=@BasicData.ProductCode"></div>
                         </div>
                     </div>
                 </div>
