新增 l-dataNotes 區塊

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/GlobalIndex/GlobalIndexWrap.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/GlobalIndex/GlobalIndexWrap.cshtml
@@ -233,6 +233,13 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="l-dataNotes">
+                                <div class="l-flex u-flex-col u-flex-gap-xs u-left">
+                                    <div class="l-flex__item">
+                                        <div class="t-tip s4">註：除了台灣指數延遲報價外，其他商品皆提供收盤價。如名稱內容中含有括號()者，係為ETF。</div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="l-flex__item" id="美洲" data-name="globalIndex" style="display: none;">
                             <!-- 左右表格 -->
@@ -367,6 +374,13 @@
                                                 }
                                             </tbody>
                                         </table>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="l-dataNotes">
+                                <div class="l-flex u-flex-col u-flex-gap-xs u-left">
+                                    <div class="l-flex__item">
+                                        <div class="t-tip s4">註：如名稱內容中含有括號()者，係為ETF。</div>
                                     </div>
                                 </div>
                             </div>
@@ -551,6 +565,13 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="l-dataNotes">
+                                <div class="l-flex u-flex-col u-flex-gap-xs u-left">
+                                    <div class="l-flex__item">
+                                        <div class="t-tip s4">註：如名稱內容中含有括號()者，係為ETF。</div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -637,6 +658,13 @@
                                         }
                                     </tbody>
                                 </table>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="l-dataNotes">
+                        <div class="l-flex u-flex-col u-flex-gap-xs u-left">
+                            <div class="l-flex__item">
+                                <div class="t-tip s4">註：如名稱內容中含有括號()者，係為ETF。</div>
                             </div>
                         </div>
                     </div>
@@ -870,6 +898,13 @@
                                         }
                                     </tbody>
                                 </table>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="l-dataNotes">
+                        <div class="l-flex u-flex-col u-flex-gap-xs u-left">
+                            <div class="l-flex__item">
+                                <div class="t-tip s4">註：如名稱內容中含有括號()者，係為ETF。</div>
                             </div>
                         </div>
                     </div>
